update new lab ids

--- a/html/20fc4d4948bd4f1c928374d4f11dba62.html
+++ b/html/20fc4d4948bd4f1c928374d4f11dba62.html
@@ -2,9 +2,9 @@
 <script src="https://vlabs.ac.in:5959/feedback_utils.js"></script>
 <script>// <![CDATA[
 var user_id = "%%USER_ID%%"
-var lab_id = "EE30"
+var lab_id = "ee30"
 var lab_name = "Substation Automation Lab"
-var exp_id = "E99349"
+var exp_id = "e99349"
 var exp_name = "Monitoring Feeder parameter from workstation"
 // ]]></script>
 </p>
