--- a/html/3df2c4823b174e01a5c5be54a7085f4a.html
+++ b/html/3df2c4823b174e01a5c5be54a7085f4a.html
@@ -2,9 +2,9 @@
 <script src="https://vlabs.ac.in:5959/feedback_utils.js"></script>
 <script>// <![CDATA[
 var user_id = "%%USER_ID%%"
-var lab_id = "EE30"
+var lab_id = "ee30"
 var lab_name = "Substation Automation Lab"
-var exp_id = "E99342"
+var exp_id = "e99342"
 var exp_name = "Development of 11KV/433 volts substation automation scheme using PLC for cyclic ON/OFF load control"
 // ]]></script>
 </p>
