--- a/html/4cc17126c0ff44479f3cb907aa8402e7.html
+++ b/html/4cc17126c0ff44479f3cb907aa8402e7.html
@@ -2,7 +2,7 @@
 <script src="https://vlabs.ac.in:5959/feedback_utils.js"></script>
 <script>// <![CDATA[
 var user_id = "%%USER_ID%%"
-var lab_id = "EE30"
+var lab_id = "ee30"
 var lab_name = "Substation Automation Lab"
 // ]]></script>
 </p>
