--- a/html/4e88e0f53d5c462d9b34773afe177a6d.html
+++ b/html/4e88e0f53d5c462d9b34773afe177a6d.html
@@ -2,9 +2,9 @@
 <script src="https://vlabs.ac.in:5959/feedback_utils.js"></script>
 <script>// <![CDATA[
 var user_id = "%%USER_ID%%"
-var lab_id = "EE30"
+var lab_id = "ee30"
 var lab_name = "Substation Automation Lab"
-var exp_id = "E99345"
+var exp_id = "e99345"
 var exp_name = "Control Of Bus Voltages Through Onload Tap Changes"
 // ]]></script>
 </p>
