--- a/html/6aa0b66c20074dc6829d198a7d72384a.html
+++ b/html/6aa0b66c20074dc6829d198a7d72384a.html
@@ -2,9 +2,9 @@
 <script src="https://vlabs.ac.in:5959/feedback_utils.js"></script>
 <script>// <![CDATA[
 var user_id = "%%USER_ID%%"
-var lab_id = "EE30"
+var lab_id = "ee30"
 var lab_name = "Substation Automation Lab"
-var exp_id = "E99351"
+var exp_id = "e99351"
 var exp_name = "Circuit Breaker Status Indication from field input:"
 // ]]></script>
 </p>
