--- a/html/72b1faaf065b4c668eed174f7e01f16e.html
+++ b/html/72b1faaf065b4c668eed174f7e01f16e.html
@@ -2,9 +2,9 @@
 <script src="https://vlabs.ac.in:5959/feedback_utils.js"></script>
 <script>// <![CDATA[
 var user_id = "%%USER_ID%%"
-var lab_id = "EE30"
+var lab_id = "ee30"
 var lab_name = "Substation Automation Lab"
-var exp_id = "E99350"
+var exp_id = "e99350"
 var exp_name = "Control of Group Operated Switches (GOS) from workstation"
 // ]]></script>
 </p>
