--- a/html/6aa0b66c20074dc6829d198a7d72384a.html
+++ b/html/6aa0b66c20074dc6829d198a7d72384a.html
@@ -1,5 +1,4 @@
 <p>
-<script src="https://vlabs.ac.in:5959/feedback_utils.js"></script>
 <script>// <![CDATA[
 var user_id = "%%USER_ID%%"
 var lab_id = "ee30"
@@ -8,4 +7,4 @@ var exp_id = "e99351"
 var exp_name = "Circuit Breaker Status Indication from field input:"
 // ]]></script>
 </p>
-<p><a onclick="submit_feedback(lab_id, lab_name, exp_id, exp_name, user_id)" style="cursor: pointer;">Click here </a> to give feedback</p>
+<p><a onclick="submitFeedback(lab_id, lab_name, exp_id, exp_name, user_id)" style="cursor: pointer;">Click here </a> to give feedback</p>
