Updated lab_ids and exp_ids

--- a/html/fedb00f76d094a599ecde0cd05624454.html
+++ b/html/fedb00f76d094a599ecde0cd05624454.html
@@ -1,8 +1,24 @@
 <p><button onclick="popup()">Full Screen</button></p>
 <p></p>
-<p><iframe src="http://sa-nitk.vlabs.ac.in/images/normal load.swf" height="602" width="802"> </iframe></p>
+<p><iframe src="http://sa-nitk.vlabs.ac.in/images/normal load.swf" width="802" height="602"> </iframe></p>
 <script>// <![CDATA[
 function popup(){
-  window.open('https://sa-nitk.vlabs.ac.in/exp8/index.html#', '_blank', 'toolbar=0,location=0,menubar=0');
+  window.open('http://sa-nitk.vlabs.ac.in/images/normal load.swf', '_blank', 'toolbar=0,location=0,menubar=0');
  }
+// ]]></script>
+<p></p>
+<script>// <![CDATA[
+// ****** ALSO MODIFY THE URLS GIVEN ABOVE **************
+// ********MODIFY THIS SECTION **************************
+
+ var lab_id = "ee30"; 
+ var exp_name = "Development of 11KV/433 volts substation automation scheme using PLC for normal load operation"
+ var lab_name = "Substation Automation"
+ var user_id = "%%USER_ID%%"; //get the User ID as a string  
+ var exp_id = "e99344"
+ 
+
+ submitUsage(lab_id, exp_name, lab_name, user_id, exp_id);
+ 
+// *******DO NOT MODIFY THIS SECTION AGAIN ************
 // ]]></script>
