--- a/html/1e3296efeb11478a9c265db1fca047a6.html
+++ b/html/1e3296efeb11478a9c265db1fca047a6.html
@@ -1,8 +1,23 @@
 <p><button onclick="popup()">Full Screen</button></p>
 <p></p>
-<p><iframe src="http://sa-nitk.vlabs.ac.in/images/recloser.swf" height="602" width="802"> </iframe></p>
+<p><iframe src="http://sa-nitk.vlabs.ac.in/images/recloser.swf" width="802" height="602"> </iframe></p>
 <script>// <![CDATA[
 function popup(){
   window.open('http://sa-nitk.vlabs.ac.in/images/recloser.swf', '_blank', 'toolbar=0,location=0,menubar=0');
  }
+// ]]></script>
+<script>// <![CDATA[
+// ****** ALSO MODIFY THE URLS GIVEN ABOVE **************
+// ********MODIFY THIS SECTION **************************
+
+ var lab_id = "ee30"; 
+ var exp_name = "Autoreclosure And Sectionalizer Operation"
+ var lab_name = "Substation Automation"
+ var user_id = "%%USER_ID%%"; //get the User ID as a string  
+ var exp_id = "e99341"
+ 
+
+ submitUsage(lab_id, exp_name, lab_name, user_id, exp_id);
+ 
+// *******DO NOT MODIFY THIS SECTION AGAIN ************
 // ]]></script>
