--- a/html/245a0a1a722e401dbe11c8842f24ca56.html
+++ b/html/245a0a1a722e401dbe11c8842f24ca56.html
@@ -1,8 +1,24 @@
 <p><button onclick="popup()">Full Screen</button></p>
 <p></p>
-<p><iframe src="http://sa-nitk.vlabs.ac.in/images/exp4.swf" height="602" width="802"> </iframe></p>
+<p><iframe src="http://sa-nitk.vlabs.ac.in/images/exp4.swf" width="802" height="602"> </iframe></p>
 <script>// <![CDATA[
 function popup(){
-  window.open('http://sa-nitk.vlabs.ac.in/exp4/index.html#', '_blank', 'toolbar=0,location=0,menubar=0');
+  window.open('http://sa-nitk.vlabs.ac.in/images/exp4.swf', '_blank', 'toolbar=0,location=0,menubar=0');
  }
+// ]]></script>
+<p></p>
+<script>// <![CDATA[
+// ****** ALSO MODIFY THE URLS GIVEN ABOVE **************
+// ********MODIFY THIS SECTION **************************
+
+ var lab_id = "ee30"; 
+ var exp_name = "Fault scenario simulation in a feeder"
+ var lab_name = "Substation Automation"
+ var user_id = "%%USER_ID%%"; //get the User ID as a string  
+ var exp_id = "e99348"
+ 
+
+ submitUsage(lab_id, exp_name, lab_name, user_id, exp_id);
+ 
+// *******DO NOT MODIFY THIS SECTION AGAIN ************
 // ]]></script>
