--- a/html/4ba29daa057c4b788609280ea2d5bee9.html
+++ b/html/4ba29daa057c4b788609280ea2d5bee9.html
@@ -1,8 +1,23 @@
 <p><button onclick="popup()">Full Screen</button></p>
 <p></p>
-<p><iframe src="http://sa-nitk.vlabs.ac.in/images/exp2.swf" height="602" width="802"> </iframe></p>
+<p><iframe src="http://sa-nitk.vlabs.ac.in/images/exp2.swf" width="802" height="602"> </iframe></p>
 <script>// <![CDATA[
 function popup(){
-  window.open('https://sa-nitk.vlabs.ac.in/exp2/index.html#', '_blank', 'toolbar=0,location=0,menubar=0');
+  window.open('http://sa-nitk.vlabs.ac.in/images/exp2.swf', '_blank', 'toolbar=0,location=0,menubar=0');
  }
+// ]]></script>
+<script>// <![CDATA[
+// ****** ALSO MODIFY THE URLS GIVEN ABOVE **************
+// ********MODIFY THIS SECTION **************************
+
+ var lab_id = "ee30"; 
+ var exp_name = "Control of Group Operated Switches (GOS) from workstation"
+ var lab_name = "Substation Automation"
+ var user_id = "%%USER_ID%%"; //get the User ID as a string  
+ var exp_id = "e99350"
+ 
+
+ submitUsage(lab_id, exp_name, lab_name, user_id, exp_id);
+ 
+// *******DO NOT MODIFY THIS SECTION AGAIN ************
 // ]]></script>
